# Sample-repo

./: README.md  README.txt
ivi-system/: README.md  procedure.md
ivi-system/apps/cluster-ui/: CHANGELOG.md  CMakeLists.txt  ClusterMain.qml  Dashboard.qml  README.md  main.cpp  main.qml
ivi-system/apps/cluster-ui/components/: CarIllustration.qml  GearIndicator.qml  NavigationDisplay.qml  NavigationView.qml  RpmGauge.qml  SpeedGauge.qml  Speedometer.qml  TopBar.qml  WarningIcons.qml
ivi-system/apps/cluster-ui/helpers/: AnimationUtils.qml
ivi-system/apps/cluster-ui/themes/: ClusterTheme.qml
ivi-system/apps/media-ui/: main.qml
ivi-system/apps/navigation-ui/: main.qml
ivi-system/docs/: architecture.md  wiring_diagram.txt
ivi-system/ipc/vsomeip-config/: vsomeip.json
ivi-system/scripts/: build.sh  cluster_ui_test.py  deploy_to_rpi.sh  launch_in_wsl.sh  run_can_simulator.py
ivi-system/services/can-service/: CMakeLists.txt
ivi-system/services/can-service/src/: can_handler.cpp  can_handler.h  main.cpp
ivi-system/services/media-service/: CMakeLists.txt
ivi-system/services/media-service/src/: main.cpp
ivi-system/services/pdc-service/: CMakeLists.txt
ivi-system/services/pdc-service/src/: main.cpp
ivi-system/yocto/layers/meta-ivi-system/conf/: layer.conf
ivi-system/yocto/layers/meta-ivi-system/recipes-apps/can-service/: can-service.bb
ivi-system/yocto/layers/meta-ivi-system/recipes-core/images/: ivi-image.bb
